force-app/main/default/objects/Vendor_Promotions__c/Vendor_Promotions__c.object-meta.xml
<CustomObject>
    <description>Junction Object to connect a Partner Vendor to a Promotion for restricting available Promotions for the Partner to select, quickly.</description>
    <label>Vendor Promotion</label>
    <nameField>
        <displayFormat>VP-{0}</displayFormat>
        <label>Vendor Promotions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>