force-app/main/default/objects/Vendor_Promotions__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date for this Vendor Promotion Record.  Automation will be needed to set the Status field as Inactive when this date is reached.</description>
        <inlineHelpText>Expiration Date for this Vendor Promotion Record</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </CustomField>