force-app/main/default/objects/Vendor_Promotions__c/fields/Name__c.field-meta.xml
<CustomField>
        <fullName>Name__c</fullName>
        <description>Name of the Vendor Promotion record, set by automation as a combination of Promo-Vendor for easier lookup.</description>
        <inlineHelpText>Name of the Vendor Promotion record, set by automation as a combination of Promo-Vendor for easier lookup.</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>