force-app/main/default/objects/Vendor_Promotions__c/fields/Promotion__c.field-meta.xml
<CustomField>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Promotion linked to this Vendor Promotion record.</description>
        <inlineHelpText>Promotion to link this Vendor Promotion to</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Vendor Promotions</relationshipLabel>
        <relationshipName>Vendor_Promotions</relationshipName>
        <type>Lookup</type>
    </CustomField>