force-app/main/default/objects/Vendor_Promotions__c/fields/Status__c.field-meta.xml
<CustomField>
        <fullName>Status__c</fullName>
        <description>Status of the Vendor Promotion.  Inactive values should not be found when a Partner looks for the the Promotion to link their selling activities to.</description>
        <inlineHelpText>Current Status of the Vendor Promotion.  Set the Status as Inactive if this Vendor should no longer be able to sell using this Promotion.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>