force-app/main/default/objects/Vendor_Promotions__c/fields/Vendor_Partner__c.field-meta.xml
<CustomField>
        <fullName>Vendor_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Vendor Partner to this Vendor Promotion</description>
        <inlineHelpText>Link the Vendor Partner to this Vendor Promotion</inlineHelpText>
        <label>Vendor Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Promotions</relationshipLabel>
        <relationshipName>Vendor_Promotions</relationshipName>
        <type>Lookup</type>
    </CustomField>